move images around and change header name

--- a/servicemac-implementation.mdx
+++ b/servicemac-implementation.mdx
@@ -1,3 +1,8 @@
+---
+title: "ServiceMac Implementation"
+description: "Implementation details for ServiceMac"
+---
+
 ## Executive Summary
 
 This document outlines a comprehensive implementation plan for deploying Kastle AI voice agents at ServiceMac. The implementation will begin with two primary agents:
