--- a/api-reference/endpoint/get-by-id.mdx
+++ b/api-reference/endpoint/get-by-id.mdx
@@ -1,4 +1,4 @@
 ---
 title: 'Get Call by ID'
-openapi: 'GET /api/v1/calls/{call_id}'
+openapi: '/api-reference/openapi.json GET /api/v1/calls/{call_id}'
 ---
