--- a/figure-welcome-agent.mdx
+++ b/figure-welcome-agent.mdx
@@ -78,4 +78,4 @@ Alternatively, Kastle AI can provide a data dump of all call records if needed. 
 
 ## Support
 
-For questions or issues with API integration, contact your Kastle AI representative.
+For questions or issues with API integration, please send us a message on https://join.slack.com/share/enQtODgxNTg1ODUyOTc3OC1iN2NhMmY3MzA4MDFmNzg1MjNjNWE1MGQ0ODI2MGM1ODM3YWRmYWI5YTY2NmNjOTdkMWZhYjllNjdmMmRkNjIz 
