--- a/figure-welcome-agent.mdx
+++ b/figure-welcome-agent.mdx
@@ -14,7 +14,7 @@ All endpoints use the base URL: `https://kapi.prod1.kastle.ai/api/v1/campaigns/e
 **Method:** `POST`  
 **Content-Type:** `application/json`
 
-> Note: The `campaign_id` will be provided by your Kastle AI representative.
+> Note: The `campaign_id` can be accessed on the campaign details page after you create a campaign to launch with
 
 #### Request Body
 
