Figure Doc Updates

--- a/figure-welcome-agent.mdx
+++ b/figure-welcome-agent.mdx
@@ -426,6 +426,6 @@ Please specify your preferred delivery method when setting up the integration.
 
 For questions, issues, or to set up your production integration:
 
-- **Technical Support**: Send us a message on our Slack channel: https://join.slack.com/share/enQtODgxNTg1ODUyOTc3OC1iN2NhMmY3MzA4MDFmNzg1MjNjNWE1MGQ0ODI2MGM1ODM3YWRmYWI5YTY2NmNjOTdkMWZhYjllNjdmMmRkNjIz
+- **Technical Support**: Send us a message on our [Slack channel](https://join.slack.com/share/enQtODgxNTg1ODUyOTc3OC1iN2NhMmY3MzA4MDFmNzg1MjNjNWE1MGQ0ODI2MGM1ODM3YWRmYWI5YTY2NmNjOTdkMWZhYjllNjdmMmRkNjIz)
 - **Production Setup**: Contact us to configure your production campaign ID and webhook endpoints
 - **API Testing**: Use the test endpoints above to validate your integration before going live 
