Update overview in Salesforce integration documentation for clarity

--- a/figure-sales-salesforce-integration.mdx
+++ b/figure-sales-salesforce-integration.mdx
@@ -2,7 +2,7 @@
 
 ## Overview
 
-This document describes the integration between Kastle AI and Figure's Salesforce instance for submitting call disposition data after call completion.
+This document describes the integration between Kastle AI and Figure's Salesforce integration for submitting call disposition data after call completion.
 
 ### Endpoint: 
 | Environment | URL |
