Update terminology in API documentation to reflect 'lead' instead of 'borrower' and add example JSON for clarity

--- a/figure-sales-salesforce-integration.mdx
+++ b/figure-sales-salesforce-integration.mdx
@@ -35,11 +35,11 @@ This document describes the integration between Kastle AI and Figure's Salesforc
 
 ### Valid Call Dispositions
 - `DID_NOT_DIAL` - Invalid phone number
-- `NO_ANSWER` - No answer from borrower
+- `NO_ANSWER` - Lead did not answer
 - `BUSY` - Line was busy
-- `DO_NOT_CALL` - Borrower requested not to be called
+- `DO_NOT_CALL` - Lead requested not to be called
 - `APPOINTMENT_SCHEDULED` - Successfully scheduled appointment
-- `BORROWER_DECEASED` - Borrower is deceased
+- `BORROWER_DECEASED` - Lead is deceased
 - `LIVE_TRANSFERRED` - Live transfer to agent
 - `WARM_TRANSFERRED` - Warm transfer to agent
 - `MISSED_TRANSFER` - Transfer was missed
