--- a/figure-sales-agent-integration.mdx
+++ b/figure-sales-agent-integration.mdx
@@ -2,7 +2,7 @@
 
 ## Overview
 
-This API powers Kastle AI’s welcome call agent, which processes borrower entities and makes automated outbound calls.  
+This API powers Kastle AI’s outbound call agent, which processes lead entities and makes automated outbound calls.  
 Two environments are available:
 
 - **Test API** – pre-configured campaign for development and testing.  
@@ -35,8 +35,8 @@ All endpoints require JWT authentication with valid Figure Lending organization 
 
 #### Field Validation Rules
 - **id**: Account id used in Salesforce API dispositions
-- **first_name**: First name of the borrower
-- **last_name**: Last name of the borrower
+- **first_name**: First name of the lead
+- **last_name**: Last name of the lead
 - **phone_number**: Must be in valid US, CA, or PR format
 - **provided_state**: Two letter state code
 
@@ -54,6 +54,17 @@ All endpoints require JWT authentication with valid Figure Lending organization 
     "entity_id": "string",
     "message": "Campaign entity created successfully"
     }
+```
+
+#### Example
+```json
+{
+    "id" : "account_test",
+    "first_name": "John",
+    "last_name": "Smith",
+    "phone_number": "3512443433",
+    "provided_state": "CA"
+}
 ```
 
 
